--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "dotenv": "^16.6.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "node": "^25.5.0",
-    "redis": "^5.10.0"
+    "redis": "^5.10.0",
+    "router": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
